fixe scroll bug on mobile

--- a/styles/global.css
+++ b/styles/global.css
@@ -14,8 +14,9 @@ body {
 		sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
-body {
+html, body {
 	overflow-x: hidden;
+	width: 100%;
 }
 
 h1,
